--- a/InsulatorClassifier_v1/Base.lproj/Main.storyboard
+++ b/InsulatorClassifier_v1/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="SSc-3k-bOv">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -15,90 +15,46 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="240" translatesAutoresizingMaskIntoConstraints="NO" id="w65-Jg-adB">
-                                <rect key="frame" x="30" y="44" width="354" height="818"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6bU-Jc-vuJ" userLabel="Title">
-                                        <rect key="frame" x="87" y="0.0" width="180" height="112.5"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Insulator Classifier" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nl5-OH-VxG">
-                                                <rect key="frame" x="10" y="45" width="160" height="22.5"/>
-                                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="22.5" id="CuL-id-6AU"/>
-                                                    <constraint firstAttribute="width" constant="160" id="mXH-CU-cuR"/>
-                                                </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstItem="Nl5-OH-VxG" firstAttribute="centerY" secondItem="6bU-Jc-vuJ" secondAttribute="centerY" id="3re-he-ECy"/>
-                                            <constraint firstItem="Nl5-OH-VxG" firstAttribute="centerX" secondItem="6bU-Jc-vuJ" secondAttribute="centerX" id="XI1-IC-XlC"/>
-                                        </constraints>
-                                    </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wJz-Sv-xfc" userLabel="Image">
-                                        <rect key="frame" x="88" y="352.5" width="178" height="113"/>
-                                        <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="camera" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="7Da-ya-D7d">
-                                                <rect key="frame" x="-11" y="-43" width="200" height="198"/>
-                                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="200" id="6Rb-3q-WK0"/>
-                                                    <constraint firstAttribute="width" constant="200" id="Dg4-cz-ZxX"/>
-                                                </constraints>
-                                            </imageView>
-                                        </subviews>
-                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstItem="7Da-ya-D7d" firstAttribute="centerY" secondItem="wJz-Sv-xfc" secondAttribute="centerY" id="6NH-Tw-LoE"/>
-                                            <constraint firstItem="7Da-ya-D7d" firstAttribute="centerX" secondItem="wJz-Sv-xfc" secondAttribute="centerX" id="lrI-hm-tcB"/>
-                                        </constraints>
-                                    </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yjt-VH-d1F" userLabel="Buttons">
-                                        <rect key="frame" x="48.5" y="705.5" width="257" height="112.5"/>
-                                        <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" alignment="center" spacing="110" translatesAutoresizingMaskIntoConstraints="NO" id="HC0-4K-cG4">
-                                                <rect key="frame" x="20" y="41" width="217" height="30"/>
-                                                <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YHx-B3-4ml">
-                                                        <rect key="frame" x="0.0" y="0.0" width="53" height="30"/>
-                                                        <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        <state key="normal" title="Choose"/>
-                                                    </button>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aAm-fV-XJO">
-                                                        <rect key="frame" x="163" y="0.0" width="54" height="30"/>
-                                                        <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        <state key="normal" title="Classify"/>
-                                                    </button>
-                                                </subviews>
-                                            </stackView>
-                                        </subviews>
-                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstItem="HC0-4K-cG4" firstAttribute="centerY" secondItem="Yjt-VH-d1F" secondAttribute="centerY" id="TG5-hm-lkf"/>
-                                            <constraint firstItem="HC0-4K-cG4" firstAttribute="centerX" secondItem="Yjt-VH-d1F" secondAttribute="centerX" id="wP8-IX-gHS"/>
-                                        </constraints>
-                                    </view>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="6bU-Jc-vuJ" firstAttribute="top" secondItem="w65-Jg-adB" secondAttribute="top" id="Oyp-WQ-AYD"/>
-                                </constraints>
-                            </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iOM-1W-6e0" userLabel="centerImageView">
+                                <rect key="frame" x="20" y="88" width="374" height="774"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="w65-Jg-adB" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="dwj-yg-Xv9"/>
-                            <constraint firstItem="w65-Jg-adB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="eYG-ZB-eYz"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="w65-Jg-adB" secondAttribute="bottom" id="pn3-f4-DLy"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="w65-Jg-adB" secondAttribute="trailing" constant="30" id="vEj-ja-Z5c"/>
+                            <constraint firstItem="iOM-1W-6e0" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="73T-KZ-GDd"/>
+                            <constraint firstItem="iOM-1W-6e0" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="dIU-CZ-TbD"/>
+                            <constraint firstItem="iOM-1W-6e0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="t4t-cR-cnH"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="iOM-1W-6e0" secondAttribute="trailing" constant="20" id="vlR-21-akJ"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="P9M-OP-PHM">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="camera" catalog="system" id="xy2-wI-qzy">
+                            <connections>
+                                <action selector="cameraButtonTapped:" destination="BYZ-38-t0r" id="7i1-Th-TFP"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1042.0289855072465" y="114.50892857142857"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="4S5-W3-alN">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SSc-3k-bOv" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="rzx-gi-SiZ">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Muf-vd-nvK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JvX-2t-DaS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="131.8840579710145" y="114.50892857142857"/>
         </scene>
