--- a/InsulatorClassifier_v1/Base.lproj/Main.storyboard
+++ b/InsulatorClassifier_v1/Base.lproj/Main.storyboard
@@ -15,26 +15,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iOM-1W-6e0" userLabel="centerImageView">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="arM-Dc-8va">
                                 <rect key="frame" x="20" y="88" width="374" height="774"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="iOM-1W-6e0" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="73T-KZ-GDd"/>
-                            <constraint firstItem="iOM-1W-6e0" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="dIU-CZ-TbD"/>
-                            <constraint firstItem="iOM-1W-6e0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="t4t-cR-cnH"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="iOM-1W-6e0" secondAttribute="trailing" constant="20" id="vlR-21-akJ"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="P9M-OP-PHM">
+                        <barButtonItem key="leftBarButtonItem" title="Item" image="photo" catalog="system" id="3cp-YG-XXz">
+                            <connections>
+                                <action selector="photoButtonTapped:" destination="BYZ-38-t0r" id="ssc-AI-14g"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Item" image="camera" catalog="system" id="xy2-wI-qzy">
                             <connections>
                                 <action selector="cameraButtonTapped:" destination="BYZ-38-t0r" id="7i1-Th-TFP"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="imageView" destination="arM-Dc-8va" id="LSK-iK-QuH"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -61,5 +64,6 @@
     </scenes>
     <resources>
         <image name="camera" catalog="system" width="128" height="94"/>
+        <image name="photo" catalog="system" width="128" height="93"/>
     </resources>
 </document>
